[gd_scene load_steps=12 format=3 uid="uid://dab0i61vj1n23"]

[ext_resource type="Script" uid="uid://dsfql0713srp2" path="res://ui/main_menu/main_menu.gd" id="1_uhj5c"]
[ext_resource type="Texture2D" uid="uid://yleov0pgrsrq" path="res://ui/main_menu/art/IMG_0407.png" id="2_4e78x"]
[ext_resource type="AudioStream" uid="uid://wnqtkl4c2rw4" path="res://ui/main_menu/art/song_1.wav" id="2_mu8pm"]
[ext_resource type="Shader" uid="uid://du66ruvwxrmji" path="res://ui/pause_menu/shaders/color_rect_bg_blur.gdshader" id="3_3c04x"]
[ext_resource type="Texture2D" uid="uid://bbevnes47ws5i" path="res://ui/main_menu/art/IMG_0405.png" id="3_s4pem"]
[ext_resource type="Texture2D" uid="uid://blxf01i3gahjg" path="res://ui/main_menu/art/quit_icon.png" id="4_3c04x"]
[ext_resource type="Texture2D" uid="uid://d2hk0nmi73swv" path="res://ui/main_menu/art/settings_icon.png" id="4_joh67"]
[ext_resource type="Texture2D" uid="uid://du3k1r6e51wvj" path="res://ui/main_menu/art/reset_icon.png" id="4_u184e"]
[ext_resource type="Texture2D" uid="uid://cbcgvhyecft5v" path="res://ui/main_menu/art/IMG_0406.png" id="4_xio0d"]
[ext_resource type="Texture2D" uid="uid://njhtuqd0f35m" path="res://ui/main_menu/art/IMG_0404.png" id="5_tf5ef"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_joh67"]
shader = ExtResource("3_3c04x")
shader_parameter/blur_amount = 0.1
shader_parameter/mix_amount = 0.15
shader_parameter/color_over = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control" node_paths=PackedStringArray("focus_node")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uhj5c")
handle_focus = true
focus_node = NodePath("MarginContainer/PlayButton")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4e78x")
expand_mode = 2

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(626, 353)
scale = Vector2(0.544444, 0.544444)
texture = ExtResource("3_s4pem")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(391, 206)
scale = Vector2(0.387963, 0.387963)
texture = ExtResource("4_xio0d")

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(391, 206)
scale = Vector2(0.387963, 0.387963)
texture = ExtResource("5_tf5ef")

[node name="BlurRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_joh67")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="PlayButton" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 8
focus_neighbor_left = NodePath("../ButtonContainer/QuitButton")
focus_next = NodePath("../ButtonContainer/SettingsButton")
focus_previous = NodePath("../ButtonContainer/QuitButton")
theme_type_variation = &"MainMenuLabelButton"
text = "Press anywhere to start"

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="ResetButton" type="Button" parent="MarginContainer/ButtonContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Reset Save"
focus_neighbor_right = NodePath("../../PlayButton")
focus_neighbor_bottom = NodePath("../SettingsButton")
focus_next = NodePath("../SettingsButton")
theme_type_variation = &"MainMenuIconButton"
icon = ExtResource("4_u184e")
icon_alignment = 1
expand_icon = true

[node name="SettingsButton" type="Button" parent="MarginContainer/ButtonContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Settings"
focus_neighbor_top = NodePath("../ResetButton")
focus_neighbor_right = NodePath("../../PlayButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../ResetButton")
theme_type_variation = &"MainMenuIconButton"
icon = ExtResource("4_joh67")
icon_alignment = 1
expand_icon = true

[node name="QuitButton" type="Button" parent="MarginContainer/ButtonContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Quit Game"
focus_neighbor_top = NodePath("../SettingsButton")
focus_neighbor_right = NodePath("../../PlayButton")
focus_next = NodePath("../../PlayButton")
focus_previous = NodePath(".")
theme_type_variation = &"MainMenuIconButton"
icon = ExtResource("4_3c04x")
icon_alignment = 1
expand_icon = true

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_mu8pm")
bus = &"Music"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[connection signal="pressed" from="MarginContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/ButtonContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="MarginContainer/ButtonContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/ButtonContainer/QuitButton" to="." method="_on_quit_button_pressed"]
